--- a/src/app.scss
+++ b/src/app.scss
@@ -1,8 +1,9 @@
 @import "_common";
 @import "_variables";
 @import "_header";
-// @import "_main";
-// @import "_footer";
+@import "_main";
+// @import "sezioneUno";
+@import "_footer";
 
 * {
     box-sizing: border-box;
