main section2 ok

--- a/src/_main.scss
+++ b/src/_main.scss
@@ -1,12 +1,11 @@
 main{
     min-height: calc(100vh - 380px);
     @include displayFlexColumn;
+    justify-content: center;
     background-color: red; //modificare
 
     .sezione1{
-        padding: 40px;
-        width: 100%;
-        display: flex;
+        @include sectionGeneral;
         background-color: violet; //modificare
 
         .sezionePropieta{
@@ -37,47 +36,21 @@ main{
     }
 
     .sezione2{
-        padding: 40px;
-        width: 100%;
-        display: flex;
+        @include sectionGeneral;
+        @include displayFlexColumn;
         justify-content: space-around;
-        align-content: center;
-        align-items: center;
-        flex-direction: column;
         background-color: greenyellow; //da cambiare
         font-size: 1.4rem;
-        line-height: 4rem;
+        line-height: 2rem;
         text-align: center;
-
-        // .immagini{
-
-        //     padding: 14px 10px;
-        //     font-size: 1.4rem;
-        //     line-height: 0.9cm;
-        //     display: flex;
-        //     justify-content: space-around;
-        //     margin-bottom: 40px;
-
-        //     .immaginiSingle{
-        //         flex-basis: calc(100% / 3);
-        //         margin: 10px;
-
-        //         img{
-        //             margin-bottom: 10px;
-        //             // width: 100px;
-        //             // height: 100px;
-        //             width: 40%;
-        //         }
-
-        //         p{
-        //             margin-top: 20px;
-        //         }
-        //     }
-        // }
 
         .row{
             @include riga;
             justify-content: center;
+        }
+
+        img{
+            width: 22%;
         }
 
         .listaImmagini{
@@ -85,8 +58,13 @@ main{
             justify-content: space-around;
             list-style: none;
 
+            li{
+                @include marginrightsmall;
+            }
+
             img{
                 width: 40%;
+                height: 150px;
             }
         }
 
