--- a/src/_common.scss
+++ b/src/_common.scss
@@ -1,3 +1,11 @@
+.line{
+    border-bottom: 2px solid grey;
+}
+
+.pb-160{
+    padding-bottom: 160px;
+}
+
 @mixin displayFlex {
     display: flex;
     justify-content: space-around;
@@ -13,7 +21,6 @@
 
 @mixin displayFlexColumn {
     display: flex;
-    justify-content: center;
     align-content: center;
     align-items: center;
     flex-direction: column;
@@ -21,6 +28,10 @@
 
 @mixin marginleftsmall {
     margin-left: 10px;
+}
+
+@mixin marginrightsmall {
+    margin-right: 40px;
 }
 
 @mixin buttonWhite {
@@ -40,7 +51,6 @@
 
 @mixin sezioneProperty {
     width: 50%;
-    // border: 2px solid blue;
     padding: 20px;
 }
 
@@ -55,12 +65,8 @@
     border-radius: 5px;
 }
 
-// @mixin sectionGeneral {
-//     background-color: violet; //da cambiare
-//     width: 100%;
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-around;
-//     align-content: center;
-//     align-items: center;
-// }
+@mixin sectionGeneral {
+    width: 100%;
+    display: flex;
+    padding: 40px;
+}
