--- a/src/_common.scss
+++ b/src/_common.scss
@@ -70,3 +70,9 @@
     display: flex;
     padding: 40px;
 }
+
+@mixin flexColumnStart {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
