--- a/src/_footer.scss
+++ b/src/_footer.scss
@@ -1,4 +1,53 @@
 footer{
     min-height: 300px;
     background-color: yellow; //da cambiare con #ffffff
+    width: 100%;
+    @include displayFlex;
+    // flex-direction: row;
+    padding-top: 50px;
+    font-size: 1.3rem;
+    line-height: 0.8cm;
+    color: #58402c;
+
+    .sx{
+        width: 30%;
+        background-color: aqua;
+        display: flex;
+        // flex-direction: column;
+        padding: 8px;
+
+        img{
+            width: 150px;
+            padding-right: 10px;
+        }
+    }
+
+    .dx{
+        width: 70%;
+        background-color: aquamarine;
+        display: flex;
+
+        .flexdis{
+            display:flex;
+            flex-direction: column;
+            background-color: violet;
+            // width: 14px;
+
+            ul{
+                list-style: none;
+                display: flex;
+                flex-direction: column;
+                margin-right: 30px;
+
+                a{
+                    text-decoration: none;
+                    color: #58402c;
+
+                    &:hover{
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
 }
