--- a/src/_main.scss
+++ b/src/_main.scss
@@ -128,6 +128,7 @@ main{
         @include displayFlexColumn;
         background-color: green;
         color: #58402c;
+        padding-bottom: 50px;
 
         h2{
             font-size: 2rem;
@@ -155,12 +156,22 @@ main{
                 }
             }
         }
-        
+
         button{
             @include buttonBlue;
 
             &:hover{
                 @include buttonHover;
+            }
+        }
+
+        a{
+            text-decoration: none;
+            color: #58402c;
+            font-size: 1.4rem;
+
+            &:hover{
+                cursor: pointer;
             }
         }
     }
