--- a/src/_footer.scss
+++ b/src/_footer.scss
@@ -1,19 +1,16 @@
 footer{
     min-height: 300px;
-    background-color: yellow; //da cambiare con #ffffff
+    background-color: #4466D4;
     width: 100%;
     @include displayFlex;
-    // flex-direction: row;
     padding-top: 50px;
     font-size: 1.3rem;
     line-height: 0.8cm;
-    color: #58402c;
+    color: #040F0F;
 
     .sx{
         width: 30%;
-        background-color: aqua;
         display: flex;
-        // flex-direction: column;
         padding: 8px;
 
         img{
@@ -24,14 +21,11 @@ footer{
 
     .dx{
         width: 70%;
-        background-color: aquamarine;
         display: flex;
 
         .flexdis{
             display:flex;
             flex-direction: column;
-            background-color: violet;
-            // width: 14px;
 
             ul{
                 list-style: none;
@@ -41,10 +35,12 @@ footer{
 
                 a{
                     text-decoration: none;
-                    color: #58402c;
+                    color: #040F0F;
 
                     &:hover{
                         cursor: pointer;
+                    color: #7FFF00;
+                    border-bottom: 2px dotted #F400A1;
                     }
                 }
             }
